--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -5,7 +5,7 @@
 
 #mainfab {
 	position: fixed;
-	bottom: 30px;
+	top: 30px;
 	right: 30px;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .contentarea {
-	border-bottom: 1px solid black;
+	/*border-bottom: 1px solid black;*/
 	padding: 20px;
 	min-height: 300px;
 }
@@ -53,4 +53,16 @@
 .standard-button {
 	width: 200px;
 	height: 80px;
+}
+
+#newspaperwrapper {
+	justify-content: space-around;
+}
+
+.oddcontent {
+	background-color: white;
+}
+
+.evencontent {
+	background-color: lightgrey;
 }
