Added placeholder header images, basic click to scroll functionality

--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -66,3 +66,9 @@
 .evencontent {
 	background-color: lightgrey;
 }
+
+.collagecol div {
+	background-position: center; 
+	background-size: cover;
+	background-repeat: no-repeat;
+}
