Added some new images, messing around with collection prompt. Continued work on Controller logic and Server logic. DB Set up.

--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -1,3 +1,6 @@
+body {
+	height: auto !important;
+}
 #navbar {
 	text-align: center;
 	background-color: #554b47;
@@ -30,14 +33,6 @@
 
 #about {
 	text-align: center;
-}
-
-.picblock {
-	float: left;
-	display: inline-block;
-	box-sizing: border-box;
-	border: 1px solid grey;
-	background-color: lightgrey;
 }
 
 .smallpic {	
