--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -67,3 +67,52 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+
+#contact > div {
+	justify-content: space-around;	
+}
+
+#mapcontainer {
+	display: block;
+	width: 400px;
+	height: 400px;
+	background-color: lightgreen;
+}
+
+.socialMediaLink > a > img {
+	width: 50px;
+	height: 50px;
+}
+
+.socialMediaLink {
+	text-decoration: none;
+	list-style-type: none;
+	padding: 10px;
+}
+
+#socialMediaList {
+	padding: 0;
+}
+
+#connect-info {
+	/*justify-content: center;*/
+	margin-right: 50px;
+	margin-left: 50px;	    
+}
+
+#connect-card {
+	/*display: flex;
+    align-items: center;
+    justify-content: center;*/
+}
+
+.center-children {
+	align-items: center;
+	/*justify-content: center;*/
+	display: flex;
+}
+
+#contact-card-wrap {
+	padding: 20px;
+	box-sizing: border-box;
+}
