--- a/app/directives/templates/art-piece.html
+++ b/app/directives/templates/art-piece.html
@@ -1,3 +1,3 @@
-<div class="art-piece-border">
-	<img src="{{ imagePath }}">
+<div class="artwork-container">
+	<img class="artwork" ng-src="{{ imagePath }}">
 </div>
