--- a/app/styles/artcollection.css
+++ b/app/styles/artcollection.css
@@ -1,3 +1,7 @@
+#artheadbar {
+	text-align: center;
+}
+
 #artcollection {
 	display: flex;
 	align-items: center;
@@ -11,9 +15,29 @@
 	height: 1200px !important;
 	z-index: 20;
 	padding: 0;	
+	display: block !important;
 }
 
-.art-piece {
-	width: 33%;
-	box-sizing: border-box;
+art-piece {
+	width: 100%;
+	height: 100%;
+}
+
+.artwork-container {
+	width: 100%;
+	height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.artwork {
+	width: auto;
+	max-height: 300px;
+	max-width: 250px;
+	cursor: pointer;
+}
+
+.view-collection-button {
+
 }
