--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -4,6 +4,13 @@ body {
 #navbar {
 	text-align: center;
 	background-color: #554b47;
+	font-family: 'Poiret One', cursive;
+	/*font-family: 'Farsan', cursive;*/
+	/*font-family: 'Shadows Into Light', cursive;*/
+	/*font-family: 'Scope One', serif;*/
+
+
+	/* Favorite - Poiret One */
 }
 
 #mainfab {
