Create edit button directive. Began adding edit buttons to awards section.

--- a/app/directives/templates/awardcard.html
+++ b/app/directives/templates/awardcard.html
@@ -1,3 +1,4 @@
+<edit-button edit-fn="edit()"></edit-button>
 <md-card class="awardcard" md-whiteframe="5" layout="column" flex>
     <img ng-src="{{imagePath}}" class="md-card-image"/>
 	<md-card-title>        
