--- a/app/styles/mainstyle.css
+++ b/app/styles/mainstyle.css
@@ -104,3 +104,11 @@ body {
 	/*justify-content: center;*/
 	display: flex;
 }
+
+.edit-button {
+	display: flex; 
+	justify-content: center;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
