Fake 'login' flag for testing. Added edit and add buttons to most sections, non functioning. Beginning of refactoring of prompt information from main controller. Added 'login' button to anchorlinks. Cleaned up some css.

--- a/app/directives/templates/anchor-link.html
+++ b/app/directives/templates/anchor-link.html
@@ -23,5 +23,8 @@
 	        </md-tooltip>
 	    	<md-icon md-font-set="material-icons">email</md-icon>
 	  	</md-button>
+	  	<md-button ng-click="login()" aria-label="Google Hangout" class="md-fab md-raised md-mini">
+	    	<md-icon md-font-set="material-icons">email</md-icon>
+	  	</md-button>
 	</md-fab-actions>
 </md-fab-speed-dial>	
