--- a/app/directives/templates/newspapercard.html
+++ b/app/directives/templates/newspapercard.html
@@ -1,4 +1,5 @@
 <md-card class="newspapercard" md-whiteframe="5" layout="column" flex>
+	<edit-button edit-fn="edit()"></edit-button>
 	<md-toolbar class="md-hue-2">
         <h2>
           <span>{{ title }}</span>
