--- a/app/directives/templates/art-piece.html
+++ b/app/directives/templates/art-piece.html
@@ -1,3 +1,6 @@
 <div class="artwork-container">
-	<img class="artwork" ng-src="{{ imagePath }}">
+	<div class="artwork-inner-container">
+		<edit-button edit-fn="edit()"></edit-button>
+		<img class="artwork" ng-src="{{ imagePath }}">
+	</div>
 </div>
