Added element refresh support to newspaper objects.

--- a/app/directives/templates/newspapercard.html
+++ b/app/directives/templates/newspapercard.html
@@ -2,11 +2,11 @@
 	<edit-button edit-fn="edit()"></edit-button>
 	<md-toolbar class="md-hue-2">
         <h2>
-          <span>{{ title }}</span>
+          <span>{{ newspaperData.title }}</span>
         </h2>                      
     </md-toolbar>
     <md-card-content>
 		<div class="md-media-xl card-media"></div>
-		{{ description }}
+		{{ newspaperData.description }}
     </md-card-content>
 </md-card>			
