--- a/app/views/newspaper-section.html
+++ b/app/views/newspaper-section.html
@@ -1,10 +1,10 @@
 <md-content id="newspaper" class="contentarea evencontent" flex>		
 	<div class="bodycontent">
 		<div id="newspaperwrapper" layout="row" flex>
-			<newspaper ng-repeat="newspaper in newspapers" title="newspaper.title " image="newspaper.fileName" description="newspaper.description" id="newspaper._id">				
+			<newspaper ng-repeat="newspaper in newspapers" elementdata="newspaper">				
 			</newspaper>	
 			<div style="display:flex; align-items:center;">
-				<add-card ng-if="$root.loggedIn" ></add-card>      	
+				<add-card ng-if="$root.loggedIn" ></add-card>
 			</div>		    	
 		</div>			
 	</div>
