Added deletion support for awards and newspapers. Still requires update to auto refresh!

--- a/app/views/award-section.html
+++ b/app/views/award-section.html
@@ -6,7 +6,7 @@
 		    	<awardcard elementdata = "award" ></awardcard>
 		    </md-grid-tile>
 		    <md-grid-tile md-rowspan="1" md-colspan="1" ng-if="$root.loggedIn">
-		    	<add-card add-Fn="add()"></add-card>	      
+		    	<add-card add-Fn="addAward()"></add-card>
 		    </md-grid-tile>
 	  	</md-grid-list>				
 	</div>
