Refactored edit button functionality

--- a/app/directives/templates/edit-button.html
+++ b/app/directives/templates/edit-button.html
@@ -1,3 +1,3 @@
-<md-button class="md-fab edit-button" aria-label="Edit" ng-click='editFn()' ng-show="$root.loggedIn">
+<md-button class="md-fab edit-button" aria-label="Edit" ng-show="$root.loggedIn">
     <i class="material-icons">mode_edit</i>
 </md-button>
