--- a/app/directives/templates/newspapercard.html
+++ b/app/directives/templates/newspapercard.html
@@ -1,5 +1,5 @@
 <md-card class="newspapercard" md-whiteframe="5" layout="column" flex>
-	<edit-button edit-fn="edit()"></edit-button>
+	<edit-button ng-click="edit()"></edit-button>
 	<md-toolbar class="md-hue-2">
         <h2>
           <span>{{ newspaperData.title }}</span>
