Massive refactor of edit/add/delete promptcontroller pipeline. Both edit and add now occur in the Section directive, and both pass their entire data array to the PromptService. Both awards and newspapers now delete in real time. Cleaned backend logic and removed console.logs

--- a/app/directives/templates/awardcard.html
+++ b/app/directives/templates/awardcard.html
@@ -1,5 +1,5 @@
 <md-card class="awardcard" md-whiteframe="5" layout="column" flex>
-	<edit-button ng-click="edit()"></edit-button>
+	<edit-button ng-click="editFn(elementData)"></edit-button>
     <!-- <img ng-src="{{ awardInfo.file}}" class="md-card-image"/> -->
     <img src="app/images/blueribbon.jpg">
 	<md-card-title>        
