--- a/app/styles/artcollection.css
+++ b/app/styles/artcollection.css
@@ -40,3 +40,25 @@ art-piece {
 .artwork-inner-container {
 	position: relative;
 }
+
+#full-art-wrapper {
+	text-align: center;
+	width: 100%;
+	height: 100%;
+}
+
+#full-art-image {
+    max-width: 100%;	
+    max-height: 100%;
+}
+
+#full-art-inner-wrapper {
+    height: 100%;
+    width: auto;
+    position: relative;
+    display: inline-block;
+}
+
+.full-art-prompt {
+	height: 100%;
+}
