More style changes to art collections

--- a/app/styles/artcollection.css
+++ b/app/styles/artcollection.css
@@ -57,6 +57,8 @@ art-piece {
     width: auto;
     position: relative;
     display: inline-block;
+    pointer-events: none;
+
 }
 
 .full-art-prompt {
