--- a/app/styles/prompt.css
+++ b/app/styles/prompt.css
@@ -12,9 +12,13 @@
 }
 
 .md-panel {
-	width: 80%;
-	height: 80%;
+	width: 90%;
+	height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.md-panel._md-opaque-enter {
+	opacity: .9;
 }
