Removed accidental image saves to Git. Image display now works on Awards and Newspapers. Improved front end display of Newspapers.

--- a/app/directives/templates/awardcard.html
+++ b/app/directives/templates/awardcard.html
@@ -1,7 +1,7 @@
 <md-card class="awardcard" md-whiteframe="5" layout="column" flex>
 	<edit-button ng-click="editFn(elementData)"></edit-button>
     <!-- <img ng-src="{{ awardInfo.file}}" class="md-card-image"/> -->
-    <img src="app/images/blueribbon.jpg">
+    <img src="{{awardInfo.file}}">
 	<md-card-title>        
   		<md-card-title-text>
         	<span class="md-headline">{{ awardInfo.title }}</span>     
