--- a/app/directives/templates/newspapercard.html
+++ b/app/directives/templates/newspapercard.html
@@ -5,8 +5,8 @@
           <span>{{ newspaperData.title }}</span>
         </h2>                      
     </md-toolbar>
+    <img src="{{ newspaperData.file }}">      
     <md-card-content>
-		<div class="md-media-xl card-media"></div>
 		{{ newspaperData.description }}
     </md-card-content>
 </md-card>			
