--- a/app/directives/templates/awardcard.html
+++ b/app/directives/templates/awardcard.html
@@ -1,7 +1,6 @@
 <md-card class="awardcard" md-whiteframe="5" layout="column" flex>
 	<edit-button ng-click="editFn(elementData)"></edit-button>
-    <!-- <img ng-src="{{ awardInfo.file}}" class="md-card-image"/> -->
-    <img src="{{awardInfo.file}}">
+    <img ng-src="{{awardInfo.file}}">
 	<md-card-title>        
   		<md-card-title-text>
         	<span class="md-headline">{{ awardInfo.title }}</span>     
