--- a/app/styles/newspapercard.css
+++ b/app/styles/newspapercard.css
@@ -1,3 +1,19 @@
 .newspapercard {
-	max-width: 400px;
+	min-width: 400px;
+}
+
+newspaper {
+	width: 420px;
+	margin: 20px;
+}
+
+.newspaper-description {
+	text-align: justify;
+	text-justify: inter-word;
+	padding: 50px;
+	white-space: pre-wrap;
+}
+
+#newspaperwrapper {
+	justify-content: space-between;
 }
