--- a/app/views/art-collection-section.html
+++ b/app/views/art-collection-section.html
@@ -7,7 +7,7 @@
 	    	<art-piece imageName='artFile'></art-piece>      
 	    </md-grid-tile>
 	    <md-grid-tile md-rowspan="1" md-colspan="1" ng-if="$root.loggedIn">
-	    	<add-card></add-card>		      
+	    	<add-card add-Fn="addArtwork()"></add-card>		      
 	    </md-grid-tile>
   	</md-grid-list>
 	<div id="artheadbar" flex> 
