Changed directory name for art. Fix for frontend animation.

--- a/app/directives/templates/anchor-link.html
+++ b/app/directives/templates/anchor-link.html
@@ -23,7 +23,7 @@
 	        </md-tooltip>
 	    	<md-icon md-font-set="material-icons">email</md-icon>
 	  	</md-button>
-	  	<md-button ng-click="login()" aria-label="Google Hangout" class="md-fab md-raised md-mini">
+	  	<md-button id="login-button" ng-click="login()" aria-label="Google Hangout" class="md-fab md-raised md-mini">
 	    	<md-icon md-font-set="material-icons">email</md-icon>
 	  	</md-button>
 	</md-fab-actions>
