Added image deletion functionality to the server. Created image deletion screen for art. Frontend partial fix to animation for prompt source.

--- a/app/directives/templates/add-card.html
+++ b/app/directives/templates/add-card.html
@@ -1,6 +1,6 @@
 <md-card class="add-card" md-whiteframe="5" layout="column" flex>	
 	<md-card-content>
-		<md-button class="md-fab add-button" aria-label="Eat cake" ng-click='addFn()'>
+		<md-button class="md-fab add-button" aria-label="Eat cake" ng-click='addEvent($event)'>
 			<i class="material-icons">add</i>
 	    </md-button>
 	</md-card-content>	
