--- a/app/views/art-collection-section.html
+++ b/app/views/art-collection-section.html
@@ -1,13 +1,13 @@
-<md-content id="artcollection" class="contentarea evencontent" ng-class="{expanded: expandedClass}" ng-controller="ArtController">
+<md-content id="artcollection" class="contentarea evencontent" ng-class="{expanded: expandedClass}">
 	<md-grid-list id="artwork-grid-list" ng-show="showArt" 
 	md-cols="1" md-cols-sm="2" md-cols-md="3"
 	md-cols-lg="4" md-cols-gt-lg="5" 
 	md-row-height="300px" md-gutter="8px">
 	    <md-grid-tile ng-repeat="artFile in artFiles" md-rowspan="1" md-colspan="1" ng-class="tile.background">
-	    	<art-piece imageName='artFile'></art-piece>      
+	    	<art-piece imageName='artFile' edit-Fn="editArtwork(imageName, element)"></art-piece>      
 	    </md-grid-tile>
 	    <md-grid-tile md-rowspan="1" md-colspan="1" ng-if="$root.loggedIn">
-	    	<add-card add-Fn="addArtwork()"></add-card>		      
+	    	<add-card add-Fn="addArtwork(elem)"></add-card>		      
 	    </md-grid-tile>
   	</md-grid-list>
 	<div id="artheadbar" flex> 
