Fix for fullscreen images

--- a/app/views/art-collection-section.html
+++ b/app/views/art-collection-section.html
@@ -12,6 +12,6 @@
   	</md-grid-list>
 	<div id="artheadbar" flex> 
 		<md-button ng-show="!expandedClass" class="md-raised view-collection-button" style="color: grey;" ng-click="displayArt()">View the Collection</md-button>
-		<md-button ng-show="showArt" class="md-raised view-collection-button" style="color: grey;" ng-click="displayArt()">Hide the Collection</md-button>
+		<md-button ng-show="showArt" class="md-raised view-collection-button" style="color: grey; margin-top: 100px;" ng-click="displayArt()">Hide the Collection</md-button>
 	</div>
 </md-content>
