--- a/app/styles/artcollection.css
+++ b/app/styles/artcollection.css
@@ -35,6 +35,7 @@ art-piece {
 	max-height: 300px;
 	max-width: 250px;
 	cursor: pointer;
+	border: 8px solid grey;
 }
 
 .artwork-inner-container {
@@ -48,19 +49,21 @@ art-piece {
 }
 
 #full-art-image {
-    max-width: 100%;	
-    max-height: 100%;
-}
-
-#full-art-inner-wrapper {
-    height: 100%;
-    width: auto;
-    position: relative;
-    display: inline-block;
-    pointer-events: none;
-
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    /*
+    Padding top to be set in js (height/width * 100)% 
+    background-image to be set in js (url(link));
+    */
 }
 
 .full-art-prompt {
 	height: 100%;
+}
+
+.prompt-art-display {
+	width: 80% !important;
+	max-width: 700px;
 }
