--- a/app/styles/prompt.css
+++ b/app/styles/prompt.css
@@ -18,8 +18,8 @@
 }
 
 .md-panel {
-	width: 90%;
-	height: 90%;
+	width: auto;
+	height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
