--- a/app/views/contact-section.html
+++ b/app/views/contact-section.html
@@ -6,7 +6,7 @@
 
 				<md-card-title>
 					<md-card-title-text>
-						<span class="md-headline">Connect with Me</span>
+						<span class="md-headline">Connect with Igor</span>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
