--- a/app/views/video-section.html
+++ b/app/views/video-section.html
@@ -1,6 +1,6 @@
 <md-content id="video" class="contentarea evencontent" flex>
 	<div class="bodycontent"> 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/B34u9EP5MwQ" frameborder="0" allowfullscreen></iframe>
-		<p>Art description here. This will be customizable.</p>
+		<p>Art description here. Will change with Igor. Will also set to desired video.</p>
 	</div>
 </md-content>
